Fix file browser sidebar height to fill available space
- Use flex-based sizing instead of height: 100%
- Add min-height: 0 to allow proper flex shrinking
- Use align-self: stretch on sidebar

--- a/shared/pages/Editor/Editor.module.css
+++ b/shared/pages/Editor/Editor.module.css
@@ -8,13 +8,13 @@
 .body {
 	flex: 1;
 	display: flex;
-	overflow: hidden;
+	min-height: 0;
 }
 
 .sidebar {
 	width: 240px;
 	flex-shrink: 0;
-	height: 100%;
+	align-self: stretch;
 }
 
 .main {
