--- a/shared/pages/MarkdownEditor/MarkdownEditor.module.css
+++ b/shared/pages/MarkdownEditor/MarkdownEditor.module.css
@@ -148,6 +148,30 @@ h6.heading {
 	border-top: 1px solid var(--color-border);
 }
 
+/* Table styles */
+.table {
+	margin: var(--space-4) 0;
+	border-collapse: collapse;
+	width: 100%;
+	font-size: var(--text-sm);
+}
+
+.tableRow {
+	border-bottom: 1px solid var(--color-border);
+}
+
+.tableCell {
+	padding: var(--space-2) var(--space-3);
+	text-align: left;
+	vertical-align: top;
+	border: 1px solid var(--color-border);
+}
+
+th.tableCell {
+	background: var(--color-background);
+	font-weight: var(--font-semibold);
+}
+
 /* Comment highlighting */
 .commentHighlight {
 	background: rgba(255, 212, 0, 0.3);
