--- a/shared/ui/src/Page/Page.module.css
+++ b/shared/ui/src/Page/Page.module.css
@@ -1,8 +1,9 @@
 .page {
-	min-height: 100vh;
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	background: var(--color-background);
+	overflow: hidden;
 }
 
 .content {
